# mcp-fintech-demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FINTECH_MCP_PROMPT.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
api-fintech/: Dockerfile  main.py  requirements.txt
api-fintech/adapters/primary/http/: cuentas.py  gastos.py  transferencias.py
api-fintech/adapters/secondary/memory/: cuenta_repo.py  gasto_repo.py  transferencia_repo.py
api-fintech/adapters/secondary/postgres/: cuenta_repo.py  gasto_repo.py  transferencia_repo.py
api-fintech/application/use_cases/: cuentas.py  gastos.py  transferencias.py
api-fintech/domain/: exceptions.py
api-fintech/domain/entities/: cuenta.py  gasto.py  transferencia.py
api-fintech/domain/ports/: cuenta_repository.py  gasto_repository.py  transferencia_repository.py
api-fintech/infrastructure/: container.py  database.py
docs/adr/: 0000-template.md  0001-clean-hexagonal-architecture.md  0002-streamable-http-transport.md  0003-protocol-vs-abc-ports.md  0004-lifespan-retry-pool.md  README.md
docs/pruebas/: README.md
mcp-fintech/: Dockerfile  requirements.txt  server.py
postgres/: init.sql
scripts/: patch-mcp-remote.sh
tests/: conftest.py
tests/api_fintech/integration/: conftest.py  test_http_endpoints.py  test_postgres_repos.py
tests/api_fintech/unit/: fakes.py  test_use_cases_cuentas.py  test_use_cases_gastos.py  test_use_cases_transferencias.py
tests/mcp_fintech/unit/: test_auth.py  test_permissions.py
tests/security/: conftest.py  test_audit_trail.py  test_auth_required.py  test_input_validation.py  test_permissions.py
